# FinVizCrawl

./: .env.sample  README.md  pipeline_finviz.py  pyproject.toml  requirements.txt  utils.py
.github/: codeql.yml  dependabot.yml
.github/workflows/: finviz-cron.yml  pipeline_finviz.py
finviz/: FinViz.csv  FinViz_2024-03-02.csv  FinViz_2024-03-03.csv  FinViz_2024-03-04.csv  FinViz_2024-03-05.csv  FinViz_2024-03-06.csv  FinViz_2024-03-07.csv  FinViz_2024-03-08.csv  FinViz_2024-03-09.csv  FinViz_2024-03-10.csv  FinViz_2024-03-11.csv  FinViz_2024-03-12.csv  FinViz_2024-03-13.csv  FinViz_2024-03-14.csv  FinViz_2024-03-15.csv  FinViz_2024-03-16.csv  FinViz_2024-03-17.csv  FinViz_2024-03-18.csv  FinViz_2024-03-19.csv  FinViz_2024-03-20.csv  FinViz_2024-03-21.csv  FinViz_2024-03-22.csv  FinViz_2024-03-23.csv  FinViz_2024-03-24.csv  FinViz_2024-03-25.csv  FinViz_2024-03-26.csv  FinViz_2024-03-27.csv  FinViz_2024-03-28.csv  FinViz_2024-03-29.csv  FinViz_2024-03-30.csv  FinViz_2024-03-31.csv  FinViz_2024-04-01.csv  FinViz_2024-04-02.csv  FinViz_2024-04-03.csv  FinViz_2024-04-04.csv  FinViz_2024-04-05.csv  FinViz_2024-04-06.csv  FinViz_2024-04-07.csv  FinViz_2024-04-08.csv  FinViz_2024-04-09.csv  (+784 more)
