[project]
name = "finvizcrawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.3.1",
    "finvizfinance",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[tool.uv.sources]
finvizfinance = { git = "https://github.com/ltobalina/finvizfinance.git", rev = "fix/154-html-structure" }
